--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -4,7 +4,7 @@
   <head>
       <meta charset="utf-8">
       <title>My Personal Blog</title>
-      <link rel="stylesheet" href="{% static 'style.css' %}"/>
+      <link rel="stylesheet" href="{% static 'style/style.css' %}"/>
   </head>
   <body>
   <header>
