--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -3,13 +3,13 @@
 <html lang="en">
   <head>
       <meta charset="utf-8">
-      <title>My Personal Blog</title>
+      <title>Titan's Place</title>
       <link rel="stylesheet" href="{% static 'style/style.css' %}"/>
   </head>
   <body>
   <header>
     <div id="title-text">
-      <h1>My Personal Blog</h1>
+      <h1>Titan's Place</h1>
     </div>
     <nav>
       <div id="menu-bar">
