--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -1,18 +1,18 @@
 {% extends "base.html" %}
 {% block page_title %}
-    <h2 class="content-title">Blog Posts</h2>
+      <h2 class="content-title">Blog Posts</h2>
 {% endblock page_title %}
 
 {% block page_content %}
     {% block posts %}
         {% for post in posts %}
-          <div class="post">
+          <div class="post-link">
             <h3><a href="{% url 'blog_detail' post.pk %}">{{ post.title }}</a></h3>
             <small>
                 {{ post.created_on.date }} | Categories:
                 {% for category in post.category.all %}
                     <a href="{% url 'blog_category' category.name %}">
-                        {{ category.name }}
+  {{ category.name }}
                     </a>
                 {% endfor %}
             </small>
